tests/errors/9_zero_div_errors/zero_div_return.ifj16.java
class Main {
    static void run() {
        Main.run2();
    }
    static int run2() {
        return 5/0;
    }
}
